# Switchboard

./: .env.example  .gitignore  CLAUDE.md  README.md  architecture.md  pyproject.toml
.claude/agents/: architectural-critic.md  droplet-ops-guardian.md  qa-end-2-end-tester.md
.github/workflows/: ci.yml
data/: mock_reservations.json
docs/: ONBOARDING-PROMPT.md  REVIEW-REFINEMENTS.md  agent-architectural-critic.md  agent-qa-end-2-end-tester.md  integration-gateway-charter.md  nico-caller-integration-prompt.md  postman-setup.md
scripts/: export_openapi.py
spec/: openapi.json
switchboard/: __init__.py
switchboard/api/: __init__.py  auth.py  error_handlers.py  main.py  openapi_responses.py  timing.py
switchboard/api/routes/: __init__.py  reservations.py  system.py
switchboard/core/: __init__.py  config.py  credentials.py  dispatch.py  envelope.py  errors.py
switchboard/integrations/: __init__.py
switchboard/integrations/reservations/: __init__.py  backend_mock.py  backend_opentable.py  backends.py  interface.py  mock_store.py  models.py
tests/: __init__.py  conftest.py  helpers.py  test_auth.py  test_backend_contract.py  test_config.py  test_correlation.py  test_credentials_isolation.py  test_deadline.py  test_envelope.py  test_hostile_outcomes.py  test_openapi_contract.py  test_openapi_parity.py  test_qa_followups.py  test_reservations_mock.py  test_stateful_reservations.py  test_system.py
