# ── Switchboard project & tooling configuration ───────────────────────────────
# Switchboard — the Integration Gateway. A standalone, lightweight internal HTTP
# API service (FastAPI-style) that owns third-party integrations behind one clean,
# versioned, token-gated internal contract and returns a uniform response envelope.
#
# This file is the single home for project metadata, dependencies, and the config
# of the test runner + static type checker (Rule 8 test discipline, Rule 12 types).

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "switchboard"
version = "0.1.0"
description = "Switchboard — the Integration Gateway: a standalone internal middleware API that owns third-party integrations behind one clean, versioned, token-gated internal contract."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",         # the HTTP API framework (charter: FastAPI-style)
    "uvicorn[standard]>=0.29", # ASGI server for local dev / future deploy
    "pydantic>=2.6",          # typed request/response models + the envelope
    "pydantic-settings>=2.2", # fail-loud config validation at startup (Rule 7)
    "python-dotenv>=1.0",     # load Switchboard's OWN .env into the process env
]

[project.optional-dependencies]
# Dev/test toolchain. Installed with:  pip install -e ".[dev]"
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",   # async backend/dispatch unit tests
    "httpx>=0.27",            # FastAPI TestClient transport
    "mypy>=1.9",              # the static type-check gate (Rule 12)
]

[tool.setuptools.packages.find]
include = ["switchboard*"]

# ── pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"          # async tests run without explicit marks
testpaths = ["tests"]
addopts = "-ra"

# ── mypy (the real type gate — the codebase is fully annotated, Rule 12) ───────
[tool.mypy]
python_version = "3.11"
files = ["switchboard", "scripts"]
plugins = ["pydantic.mypy"]
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
warn_return_any = true
# FastAPI route decorators are untyped upstream; don't fail the build on that one
# specific, unavoidable case while keeping every other strictness on.
disallow_untyped_decorators = false

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
